// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Route Link matches snapshot (Link | disabled) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #84C6EA;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #00629666;
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296;
}

.c1 {
  color: #84C6EA;
  font-size: 0.875rem;
}

.c1 svg {
  margin-right: var(--spacing-1x);
}

.c1:visited {
  color: #62a;
}

.c1:visited svg {
  color: #62a;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  aria-disabled="true"
  class="c0 c1"
  disabled=""
  href="/test"
  tabindex="-1"
  type="route"
>
  Navigation Link
</a>
`;

exports[`Route Link matches snapshot (Link | label and icon) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #00629666;
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296;
}

.c1 {
  color: #006296;
  font-size: 0.875rem;
}

.c1 svg {
  margin-right: var(--spacing-1x);
}

.c1:hover {
  color: #003A5A;
}

.c1:visited {
  color: #62a;
}

.c1:visited svg {
  color: #62a;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  class="c0 c1"
  href="/test"
  tabindex="0"
  type="route"
>
  <svg
    aria-hidden="true"
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
  Navigation Link
</a>
`;

exports[`Route Link matches snapshot (Link | only icon) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #00629666;
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296;
}

.c1 {
  color: #006296;
  font-size: 0.875rem;
}

.c1 svg {
  margin-right: 0;
}

.c1:hover {
  color: #003A5A;
}

.c1:visited {
  color: #62a;
}

.c1:visited svg {
  color: #62a;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  class="c0 c1"
  href="/test"
  tabindex="0"
  type="route"
>
  <svg
    aria-hidden="true"
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
</a>
`;

exports[`Route Link matches snapshot (Link) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #00629666;
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296;
}

.c1 {
  color: #006296;
  font-size: 0.875rem;
}

.c1 svg {
  margin-right: var(--spacing-1x);
}

.c1:hover {
  color: #003A5A;
}

.c1:visited {
  color: #62a;
}

.c1:visited svg {
  color: #62a;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  class="c0 c1"
  href="/test"
  tabindex="0"
  type="route"
>
  Navigation Link
</a>
`;

exports[`Route Link matches snapshot (NavLink | disabled) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #84C6EA;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #00629666;
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296;
}

.c1 {
  color: #84C6EA;
  font-size: 0.875rem;
}

.c1 svg {
  margin-right: var(--spacing-1x);
}

.c1:visited {
  color: #62a;
}

.c1:visited svg {
  color: #62a;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  aria-disabled="true"
  class="c0 c1"
  disabled=""
  href="/test"
  tabindex="-1"
  type="route"
>
  Navigation Link
</a>
`;

exports[`Route Link matches snapshot (NavLink | label and icon) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #00629666;
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296;
}

.c1 {
  color: #006296;
  font-size: 0.875rem;
}

.c1 svg {
  margin-right: var(--spacing-1x);
}

.c1:hover {
  color: #003A5A;
}

.c1:visited {
  color: #62a;
}

.c1:visited svg {
  color: #62a;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  class="c0 c1"
  href="/test"
  tabindex="0"
  type="route"
>
  <svg
    aria-hidden="true"
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
  Navigation Link
</a>
`;

exports[`Route Link matches snapshot (NavLink | only icon) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #00629666;
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296;
}

.c1 {
  color: #006296;
  font-size: 0.875rem;
}

.c1 svg {
  margin-right: 0;
}

.c1:hover {
  color: #003A5A;
}

.c1:visited {
  color: #62a;
}

.c1:visited svg {
  color: #62a;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  class="c0 c1"
  href="/test"
  tabindex="0"
  type="route"
>
  <svg
    aria-hidden="true"
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
</a>
`;

exports[`Route Link matches snapshot (NavLink) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #00629666;
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296;
}

.c1 {
  color: #006296;
  font-size: 0.875rem;
}

.c1 svg {
  margin-right: var(--spacing-1x);
}

.c1:hover {
  color: #003A5A;
}

.c1:visited {
  color: #62a;
}

.c1:visited svg {
  color: #62a;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  class="c0 c1"
  href="/test"
  tabindex="0"
  type="route"
>
  Navigation Link
</a>
`;
